# pwnagotchi

./: .gitignore  MANIFEST.in  Makefile  Makefile2  README-google.md  README.md  apt_packages.txt  pwndroid_privacy_policy  pyproject.toml  requirements.txt  setup.py  view.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.yml  PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: makefile.yml  publish.yml
builder/: build_install_gopkg.yml  combined.json.pkr.hcl  config.kcl  nexmon.yml  orangepi.yml  pwnagotchi.json  pwnagotchi.json.pkr.hcl  pwnagotchi.yml  raspberrypi.yml  raspberrypi32.json.pkr.hcl  raspberrypi32.yml  raspberrypi64.json.pkr.hcl  raspberrypi64.yml
builder/data/32bit/: pwnagotchi.json.pkr.hcl  pwnagotchi.yml  raspberrypi32.json.pkr.hcl  raspberrypi32.yml
builder/data/32bit/boot/: config.txt
builder/data/32bit/etc/: dhcpcd.conf  profile
builder/data/64bit/: bananagotchi.json.pkr.hcl  bananagotchi.yml  pwnagotchi.json.pkr.hcl  raspberrypi64.json.pkr.hcl  raspberrypi64.yml
builder/data/64bit/etc/: profile
builder/data/etc/: dhcpcd.conf  dphys-swapfile  motd  rc.local
builder/data/etc/NetworkManager/: NetworkManager.conf
builder/data/etc/bash_completion.d/: pwnagotchi_completion.sh
builder/data/etc/default/: zramswap
builder/data/etc/update-motd.d/: 01-motd  motd.sh
builder/data/root/: client_secrets.json  settings.yaml
builder/extras/: build_install_gopkg.yml  nexmon.yml
pwnagotchi/: __init__.py  _version.py  agent.py  automata.py  bettercap.py  cli.py  defaults.toml  grid.py  identity.py  log.py  utils.py  view.py  voice.py
pwnagotchi/ai/: __init__.py  epoch.py  featurizer.py  gym.py  parameter.py  reward.py  train.py
pwnagotchi/fs/: __init__.py
pwnagotchi/google/: cmd.py
pwnagotchi/locale/: voice.pot
pwnagotchi/locale/aa/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/ab/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/ae/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/af/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/ak/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/am/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/an/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/ar/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/as/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/av/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/ay/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/az/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/ba/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/be/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/bg/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/bi/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/bm/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/bn/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/bo/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/br/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/bs/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/locale/by/LC_MESSAGES/: voice.mo  voice.po
pwnagotchi/mesh/: peer.py  utils.py  wifi.py
pwnagotchi/plugins/: __init__.py  cmd.py
pwnagotchi/plugins/default/: age.py  aircrackonly.py  auto-tune.py  auto-update.py  auto_backup.py  bluetoothsniffer.py  bt-tether.html  bt-tether.py  cache.py  display-password.py  example.py  exp.py  fix_brcmf_plugin.py  fix_services.py  gdrivesync.py  gpio_buttons.py  gps.py  gps_listener.py  grid.py  hashie.py  internet-connection.py  logtail.py  memtemp-plus.py  memtemp.py  net-pos.py  ohcapi.py  onlinehashcrack.py  paw-gps.py  pisugar2.py  pisugar3.py  pisugarx.py  pwncrack.py  pwndroid.py  switcher.py  ups_lite.py  wardriver.py  webcfg.py  webgpsmap.py  wigle.py  wittypi.py  (+1 more)
pwnagotchi/ui/: colors.py  components.py  display.py  faces.py  state.py  view.py
pwnagotchi/ui/hw/: __init__.py  adafruit2in13.py  argonpod.py  base.py  dfrobot.py  dfrobot1.py  dfrobot2.py  dfrobot_v2.py  displayhatmini.py  dummydisplay.py  gamepi15.py  gamepi20.py  gfxhat.py  i2coled.py  inky.py  inkyv2.py  lcdhat.py  minipitft.py  minipitft2.py  oledhat.py  papirus.py  pirateaudio.py  pitft.py  spotpear154lcd.py  spotpear24inch.py  tftbonnet.py  waveshare13in3k.py  waveshare144lcd.py  waveshare1in02.py  waveshare1in44lcd.py  waveshare1in54.py  waveshare1in54_V2.py  waveshare1in54b.py  waveshare1in54b_V2.py  waveshare1in54c.py  waveshare1in64g.py  waveshare213inb_v4.py  waveshare27inchPartial.py  waveshare27inchv2.py  waveshare2in13.py  (+66 more)
pwnagotchi/ui/web/: __init__.py  handler.py  server.py
scripts/: BR.bat  BR.sh  backup.sh  fix_bluetooth.sh  language.sh  linux_connection_share.sh  macos_connection_share.sh  openbsd_connection_share.sh  preview.py  restore.sh
(+548 files in other folders)
