[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pwnagotchi"
dynamic = ["version"]
dependencies = [
    "Pillow",
    "PyYAML",
    "RPi.GPIO",
    "file-read-backwards",
    "flask",
    "flask-cors",
    "flask-wtf",
    "gast",
    "gym",
    "inky",
    "pycryptodome",
    "pydrive2",
    "python-dateutil",
    "requests",
    "rpi_hardware_pwm",
    "scapy",
    "shimmy",
    "smbus2",
    "spidev",
    "stable_baselines3",
    "toml",
    "torch",
    "torchvision",
    "tweepy",
    "websockets"
]
requires-python = ">=3.9"
authors = [
  {name = "Evilsocket", email = "evilsocket@gmail.com"},
  {name = "Jayofelony", email = "oudshoorn.jeroen@gmail.com"}
]
maintainers = [
  {name = "Jayofelony", email = "oudshoorn.jeroen@gmail.com"}
]
description = "(⌐■_■) - Deep Reinforcement Learning instrumenting bettercap for WiFI pwning."
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Environment :: Console',
]

[project.urls]
Homepage = "https://pwnagotchi.org/"
Documentation = "https://pwnagotchi.org/"
Repository = "https://github.com/jayofelony/pwnagotchi.git"
Issues = "https://github.com/jayofelony/pwnagotchi/issues"

[project.scripts]
pwnagotchi_cli = "bin.pwnagotchi:pwnagotchi_cli"